--- a/server/app/templates/base.html
+++ b/server/app/templates/base.html
@@ -9,6 +9,7 @@
     <script src="{{ url_for('static', filename='js/jquery-3.1.0.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery.highlight.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jgm.js') }}"></script>
     {% block head %}{% endblock %}
   </head>
   <body class="{% block body_class %}{% endblock %}">
