--- a/server/app/static/style/app.scss
+++ b/server/app/static/style/app.scss
@@ -4,6 +4,7 @@
 @import 'libs/fontawesome/font-awesome';
 @import 'libs/bootstrap.min.css';
 @import 'libs/poncho.css';
+@import 'libs/select2.min.css';
 
 .container-fluid {
   max-width: 1170px;
