Empezando integracion con suggester de tags

--- a/server/app/static/style/app.css
+++ b/server/app/static/style/app.css
@@ -2349,6 +2349,9 @@
     display: table-cell;
     vertical-align: middle; }
 
+button {
+  outline: none !important; }
+
 .highlight {
   background-color: yellow; }
 
