--- a/server/app/templates/search/result.html
+++ b/server/app/templates/search/result.html
@@ -72,7 +72,7 @@
                         {{ result.subtopic.name }}
                     </button>
                 {% else %}
-                    <button type="button" class="btn btn-default without-subtopic" data-original-title='Cargando subtemas sugeridos...'>
+                    <button type="button" class="btn btn-default without-subtopic">
                         <i class="fa fa-tags"></i>
                         Sin subtema
                     </button>
