--- a/server/app/templates/base.html
+++ b/server/app/templates/base.html
@@ -6,11 +6,14 @@
     <title>PreguntasJGM</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style/app.css') }}">
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='img/favicon.ico') }}" />
-    <script src="{{ url_for('static', filename='js/jquery-3.1.0.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/jquery.highlight.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/jquery.qtip.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/select2.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/libs/jquery-3.1.0.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/libs/jquery.highlight.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/libs/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/libs/jquery.qtip.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/libs/select2.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/questions/delete.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/questions/edit.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/questions/tags.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jgm.js') }}"></script>
     {% block head %}{% endblock %}
   </head>
