--- a/server/app/static/style/app.css
+++ b/server/app/static/style/app.css
@@ -2429,7 +2429,8 @@ button {
   background-color: #fafafa;
   border-radius: 4px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-  margin-left: 10px; }
+  margin-left: 10px;
+  overflow: hidden; }
   .qtip-jgm .qtip-content {
     position: static;
     padding: 0;
@@ -2451,7 +2452,8 @@ button {
         .qtip-jgm .qtip-content .menu button.btn-success {
           margin-left: 8px; }
     .qtip-jgm .qtip-content .tag-list {
-      overflow: scroll;
+      overflow-x: hidden;
+      overflow-y: scroll;
       height: 100%; }
       .qtip-jgm .qtip-content .tag-list button {
         padding: 8px;
