--- a/server/app/templates/base.html
+++ b/server/app/templates/base.html
@@ -11,6 +11,7 @@
     <script src="{{ url_for('static', filename='js/libs/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/libs/jquery.qtip.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/libs/select2.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/libs/nprogress.js') }}"></script>
     <script src="{{ url_for('static', filename='js/questions/delete.js') }}"></script>
     <script src="{{ url_for('static', filename='js/questions/edit.js') }}"></script>
     <script src="{{ url_for('static', filename='js/questions/tags.js') }}"></script>
